--- a/jobs/apiserver/templates/config.json.erb
+++ b/jobs/apiserver/templates/config.json.erb
@@ -22,6 +22,7 @@
   params = {
     'port' => p('autoscaler.api_server.port'),
     'publicPort' => p('autoscaler.api_server.publicPort'),
+    'healthPort' => p('autoscaler.api_server.health.port'),
     'infoFilePath' => "/var/vcap/jobs/apiserver/bin/info.json",
     'cfApi' => p('autoscaler.cf.api'),
     'cfClientId' => p('autoscaler.cf.client_id'),
