--- a/jobs/servicebroker/templates/config.json.erb
+++ b/jobs/servicebroker/templates/config.json.erb
@@ -13,6 +13,7 @@
   params = {
     'port' => p('autoscaler.service_broker.port'),
     'publicPort' => p('autoscaler.service_broker.publicPort'),
+    'healthPort' => p('autoscaler.service_broker.health.port'),
     'username' => p('autoscaler.service_broker.username'),
     'password' => p('autoscaler.service_broker.password'),
     'enableCustomMetrics' => p('autoscaler.service_broker.enable_custom_metrics'),
